edit create page

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -1,11 +1,23 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      what are you thinking about
+      ❤️
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 
+  <div id="container">
+    <!-- Input with placeholder -->
+    <ion-input placeholder="Write something here" autocorrect='on' id="tellme"></ion-input>
+
+    <button ion-button icon-only>
+      <ion-icon>Cancel</ion-icon>
+    </button>
+    <button ion-button icon-only>
+      <ion-icon name="send">Publish</ion-icon>
+    </button>
+
+  </div>
 </ion-content>
