make mypage more pretty

--- a/src/pages/myPage/me.html
+++ b/src/pages/myPage/me.html
@@ -15,7 +15,7 @@
     </div>
     <br>
     <div>
-      <img src="assets/imgs/bb.JPG" class="point_board" />
+      <img src="assets/imgs/bb.JPG" class="my_profile_photo" />
     </div>
     <br>
 
@@ -29,7 +29,7 @@
   <button ion-button icon-only>
     <ion-icon name="home">Signout</ion-icon>
   </button>
-  <ion-item class="more-logout" *ngIf="loggedIn" (click)="logout()">{{'LOGOUT' | translate}}</ion-item>
+  <ion-item class="more-logout" *ngIf="loggedIn" (click)="logout()">LOGOUT</ion-item>
 
 
 </ion-content>
