--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,7 @@
       <div class="cd-timeline-block">
         <div class="cd-timeline-icon assertive">
           {{feed.author}}
+          {{feed.profilePicture}}
         </div>
         <div class="cd-timeline-content assertive">
           {{feed.desc}}
