homepage backgroud done?

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,11 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <div class="home-background-pic" src="home.jpg">
-  </div>
+<ion-content>
+  <section class="home-background-pic">
+    <img src="assets/imgs/paris.jpeg" width=100% />
+  </section>
+
   <section id="cd-timeline" class="cd-container">
     <div *ngFor="let feed of feeds">
       <div class="cd-timeline-block">
