--- a/src/pages/myPage/me.html
+++ b/src/pages/myPage/me.html
@@ -1,7 +1,9 @@
 <ion-header>
-  <ion-title>
-    Me
-  </ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      ME
+    </ion-title>
+  </ion-navbar>
 </ion-header>
 
 <ion-content padding>
