edit the backgroud pic

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -9,8 +9,9 @@
 <ion-content padding>
 
   <div id="container">
-    <!-- Input with placeholder -->
-    <ion-input placeholder="Write something here" autocorrect='on' id="tellme"></ion-input>
+    <ion-textarea placeholder="Write something here" id="tellme" maxlength="200">
+
+    </ion-textarea>
 
     <button ion-button icon-only>
       <ion-icon>Cancel</ion-icon>
